fixed some small compiling errors

--- a/manuscript/CI_interactions.tex
+++ b/manuscript/CI_interactions.tex
@@ -134,7 +134,7 @@ What this is mean exactly ? We consider there are three nested level of uncertai
 
 \textit{What is an observation of "no interaction" ?} The combination of these three sources of uncertainty together leads to many potential explanations for the observation of an absence of interaction, but only the situation where $L = 0$ is a true absence therefore is relevant for the investigation of networks. While the observation of an interaction is straightforward to interpret, absence of interactions must be decomposed in different quantities. It is particularly important to rule out the situations where $D=0 \cup X = 1 \cup L=1$, i.e. the interaction occurred at the location but was not observed, and $D=1 \cup X = 0 \cup L =1$, the interaction would have been detected but did not occur. 
 
-It is important to keep in mind that for network analysis, ecologists seek to measure the occurrence of true absences, which is the joint event $L=1\cup X=1 \cup \D=1$), but in reality they measure the marginal probability $P(L) = k/n$. 
+It is important to keep in mind that for network analysis, ecologists seek to measure the occurrence of true absences, which is the joint event $L=1\cup X=1 \cup D=1$), but in reality they measure the marginal probability $P(L) = k/n$. 
 
 
 
@@ -150,7 +150,7 @@ The pattern of Fig. X (binomial CL fig from Dom) should be compared to the frequ
 
 The obvious rule of thumb derived from the above example will be “sample more”, but we note that there are limits to the utility of this motto. Sampling more will clearly reduce uncertainty regarding the upper bound of the probability of interaction, and it will also increase the probability of detecting unlikely interactions (i.e. interactions occurring with a low probability). Yet, since the probability of observing the co-occurrence of two species will always be higher than the probability of observing their interaction (since the probability of interaction is conditional on both interaction partners being present), we will accumulate observations of co-occurrences quicker than we will accumulate observations of interactions. Thus, the more we sample, the more holes will appear in our interaction matrix, which may seem like a counter-intuitive outcome.
 
-As a solution towards deciding whether unobserved interactions were undetected due to sampling, or whether they truly do not occur, Weinstein et al. (2017) used daily repeated sampling rounds to estimate the daily probability of detecting a hummingbird interaction, and to thereby model the observation and process mechanisms (Weinstein, B. G., & Graham, C. H. (2017). On comparing traits and abundance for predicting species interactions with imperfect detection. Food Webs 11; 17-25: https://doi.org/10.1016/j.fooweb.2017.05.002). While conceptually attractive, this approach is unsuitable for interactions occurring over longer time scales (like associations between hosts and parasitoids with a single generation per year), or very rare interactions (since no matter how frequently and extensively we sample, there will still be some rare interactions lurking around). What is worse, the problem persists that if a given interaction is not observed on a given day, then it may still be either because it was impossible that day ((P(L|co-occurrence of A and B)=0), because interaction between the two did occur but was not observed, or from any combination of the two. Thus, from a conceptual perspective, this approach will fail to satisfactorily separating between all sources of uncertainty. An interaction not observed on day t may have gone unobserved either because there were constraints on the process (i.e. the probability was really zero), because of chance variation in the realized incidence of an event associated with a finite probability. Most importantly, if during a series of days, two species are simply never observed co-occurring, then we still have not learnt a thing about their probability of interacting should they do so. In other words, if the two interaction partners do not co-occur, we will still gain no information.
+As a solution towards deciding whether unobserved interactions were undetected due to sampling, or whether they truly do not occur, Weinstein et al. (2017) used daily repeated sampling rounds to estimate the daily probability of detecting a hummingbird interaction, and to thereby model the observation and process mechanisms (Weinstein, B. G., \& Graham, C. H. (2017). On comparing traits and abundance for predicting species interactions with imperfect detection. Food Webs 11; 17-25: https://doi.org/10.1016/j.fooweb.2017.05.002). While conceptually attractive, this approach is unsuitable for interactions occurring over longer time scales (like associations between hosts and parasitoids with a single generation per year), or very rare interactions (since no matter how frequently and extensively we sample, there will still be some rare interactions lurking around). What is worse, the problem persists that if a given interaction is not observed on a given day, then it may still be either because it was impossible that day ((P(L|co-occurrence of A and B)=0), because interaction between the two did occur but was not observed, or from any combination of the two. Thus, from a conceptual perspective, this approach will fail to satisfactorily separating between all sources of uncertainty. An interaction not observed on day t may have gone unobserved either because there were constraints on the process (i.e. the probability was really zero), because of chance variation in the realized incidence of an event associated with a finite probability. Most importantly, if during a series of days, two species are simply never observed co-occurring, then we still have not learnt a thing about their probability of interacting should they do so. In other words, if the two interaction partners do not co-occur, we will still gain no information.
 
 An added complication is that not all sourced of uncertainty are proportional to sample size. To score an interaction between A and B, we will need to identify both partners correctly (a non-trivial problem in many food webs; e.g. Kaartinen et al. 2011 Ecol Entomol; Roslin and Majaneva 2016) and be able to resolve all interactions with a similar likelihood. For both molecular (ref ref) and rearing techniques, given types of interactions may go unnoticed due to technical challenges.
 
@@ -288,20 +288,20 @@ The framework can be illustrated with a simple quantiative example. Suppose we h
   \vspace{12pt}
 
 The mean of these standardized degrees is 0.158, approximately half the $\theta_{MLE}$ obtained from the observed data. We can use these standardized degrees to inform our prior expectation of the 
-distribution of interaction probabilities. With some simple R code (function calculate_parameters, \emph{Appendix S2}), we obtain prior parameters $\alpha$=0.7559544
+distribution of interaction probabilities. With some simple R code (function calculate\_parameters, \emph{Appendix S2}), we obtain prior parameters $\alpha$=0.7559544
 and $\beta$=3.6710277. Using these priors in equations~\ref{mean} 
-and~\ref{variance} above (or in the R function calculate_distribution in \emph{Appendix S2}), we find a prior mean interaction probability of 0.1707607 and a prior variance of 0.0319860.
+and~\ref{variance} above (or in the R function calculate\_distribution in \emph{Appendix S2}), we find a prior mean interaction probability of 0.1707607 and a prior variance of 0.0319860.
 
 
 Adding the observed data (n=10, k=3) and using the same code,
 we obtain posterior hyper parameters $\alpha'$=3.755954 and $\beta'$=10.671028 and a posterior mean 0.2603423 and variance 0.0133475 for the probability of. Comparing the posterior distribution to the prior, we see that the posterior is closer to the observed data and that the additional data has reduced the variance.
 
 
-We may also wish to calculate a credible interval (analogous to the frequentist confidence interval). This is also quite straightforward (see function credible_interval in \emph{Appendix S2}). In this case, a 95\% credible interval for the mean of theta is (0.07755119, 0.50557509).
+We may also wish to calculate a credible interval (analogous to the frequentist confidence interval). This is also quite straightforward (see function credible\_interval in \emph{Appendix S2}). In this case, a 95\% credible interval for the mean of theta is (0.07755119, 0.50557509).
 
 
 Now, consider the case where the two species have never been observed interacting across $n$ trials. The question is then ``what is the probability these two species do not interact''? Since it is not possible to prove that the two species could never interact, given the framework above we must fix a threshold below which we consider that there is no interaction. We call this threshold probability $\theta*$. We then use the cumulative distribution function to estimate $P(\theta<\theta*|X=0,n)$. The 
-function plot_precision in \emph{Appendix S2} calculates distribution function for $\theta*$ with an increasing number of trials. The figure below illustrates this distribution for $\theta*$=0.1.
+function plot\_precision in \emph{Appendix S2} calculates distribution function for $\theta*$ with an increasing number of trials. The figure below illustrates this distribution for $\theta*$=0.1.
 
 
 The exercise exemplified above yields a surprising result: it requires \textgreater21 observations of no interactions to be 95\% sure that the interaction probability is smaller than 0.1. Note the special case where there is no observation of the two species co-occurring and failing to interact, $n = 0$. In this situation, the posterior distribution converges to the prior distribution. 
@@ -358,11 +358,11 @@ It is fairly straigthforward to compute most of network metrics when the differe
   \subsection*{Computing the credible interval around a probability estimate}
 
 
-      As well as obtaining posterior means and variances, it is possible to calculate a 95\% credible interval about the posterior mean. This is again straightforward to do in R (see the function "credible interval" in \emph{Appendix S2}). Calculating the 95\% credible intervals for species pairs with 0 to 50 observed co-occurrances without any observed interaction (as in Fig.~\ref{Salix_pdfs}), we see that the interval narrows dramatically as the number of observations increases. In no case, however, does the confidence interval include 0. Even for a pair of species which appeared together in all 374 sites but were never observed interacting, the confidence interval (0.001, 0.018) comes close to, but does not include zero. 
+      As well as obtaining posterior means and variances, it is possible to calculate a 95\% credible interval about the posterior mean. This is again straightforward to do in R (see the function "credible interval" in \emph{Appendix S2}). Calculating the 95\% credible intervals for species pairs with 0 to 50 observed co-occurrances without any observed interaction (as in Fig.~\ref{Salix_pdfs}), we see that the interval narrows dramatically as the number of observations increases. In no case, however, does the confidence interval include 0. Even for a pair of species which appeared together in all 374 sites but were never observed interacting, the confidence interval (0.001, 0.018) comes close to, but does not include zero (Table~\ref{interval_table}). 
 
 
       \begin{table}[h]
-        \caption{}
+        \caption{95\% credible intervals for the interaction probability of two species that co-occur in $N$ sites but are never observed to interact, obtained using prior information from the \emph{Salix}-galler network in~\citet{Balbour2016}.}
         \label{interval_table}
         \begin{tabular}{l | c c}
         N & Lower bound & Upper bound \\
@@ -387,7 +387,7 @@ It is fairly straigthforward to compute most of network metrics when the differe
 
   \subsection*{How many samples are required to reach a minimal precision}
 
-    Rather than calculating confidence intervals for a posterior distribution after collecting data, we may wish to know how many data points are necessary to obtain a given level of confidence that two co-occurring species do not interact. The number of samples needed will depend on both our desired level of confidence and the threshold below which we assume that two species are unlikely to ever interact. If we want to be 95\% confident that the interaction probability for two species in the \emph{Salix}-galler system is below 0.5, 0.1, or 0.01, we would need 6, 54, and 114 observed co-occurrances with no observed interaction (see function samples_required in~\emph{Appendix S2}). Given the low levels of replication in most network studies, this implies that we should have fairly low confidence in many "non-interacting" pairs of species. Even in the \emph{Salix}-galler dataset, [[how many pairs of species co-occur in >6,54,114 sites?]].  Discounting potential interactions, then, requires either a stronger prior expectation of no interaction (e.g., we can be highly confident that a palm tree will not predate upon a leopard no matter how many times the two species are observed together) or very extensive sampling.
+    Rather than calculating confidence intervals for a posterior distribution after collecting data, we may wish to know how many data points are necessary to obtain a given level of confidence that two co-occurring species do not interact. The number of samples needed will depend on both our desired level of confidence and the threshold below which we assume that two species are unlikely to ever interact. If we want to be 95\% confident that the interaction probability for two species in the \emph{Salix}-galler system is below 0.5, 0.1, or 0.01, we would need 6, 54, and 114 observed co-occurrances with no observed interaction (Fig.~\ref{Salix_cdfs}; see function samples\_required in~\emph{Appendix S2}). Given the low levels of replication in most network studies, this implies that we should have fairly low confidence in many "non-interacting" pairs of species. Even in the \emph{Salix}-galler dataset, [[how many pairs of species co-occur in \textgreater6,54,114 sites?]].  Discounting potential interactions, then, requires either a stronger prior expectation of no interaction (e.g., we can be highly confident that a palm tree will not predate upon a leopard no matter how many times the two species are observed together) or very extensive sampling.
 
 
     \begin{figure}[ht]
